--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,17 @@
 {
-    "extends": ["airbnb", "prettier"],
-    "parser": "babel-eslint",
-    "env": {
-        "browser": true,
-        "es2020": true
-    },
-    "parserOptions": {
-
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "linebreak-style": ["error", "windows"],
-        "prettier/prettier": ["error"]
-    }
+  "extends": ["airbnb", "prettier"],
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "linebreak-style": ["error", "windows"],
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]
+  }
 }
